<resources>
    <string name="app_name">nutriChive</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="headlinetxt_camera">Mari temukan resep terbaikmu!</string>
    <string name="bodytxt_camera">Ambil gambar, dan temukan resep dari\n bahan - bahan yang anda ambil!</string>
    <string name="galeri">Galeri</string>
    <string name="ambil_gambar">Ambil gambar</string>
    <string name="back_button">back button</string>
    <string name="nama_bahan">Nama Bahan</string>
    <string name="recoment_text">Yeay, berhasil menemukan resep dari bahan makananmu</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="input_name">Masukkan nama anda</string>
    <string name="input_email">Masukkan email anda</string>
    <string name="create_password">Buat password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Nama</string>
    <string name="have_account">Tidak punya akun?</string>
    <string name="input_password">Masukkan password anda</string>
    <string name="username">Username</string>
    <string name="input_username">Masukkan username anda</string>
    <string name="nomor_telepon">Nomor telepon</string>
    <string name="input_nomor_telepon">Masukkan nomor telepon anda</string>
    <string name="logout">Logout</string>
</resources>