<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camera.CameraActivity">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/arrow_sm_left_svgrepo_com"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/img"
            android:layout_marginBottom="8dp"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/headlinetxt_camera"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:text="@string/bodytxt_camera"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_galeri"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/galeri"
                android:textSize="12sp"
                android:layout_marginEnd="16dp"/>

            <Button
                android:id="@+id/btn_camera"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/ambil_gambar"
                android:textSize="12sp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>